--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
   <meta http-equiv=´X-UA-Compatible´content=´IE=edge´>
   <title>TITULO DA ABA</title> 
   <meta name=´viewport´content=´width=device-width, initial-scale=1´>
-  <link rel=´stylesheet´ type=´text/css´ media=´screen´
+  <link rel=´stylesheet´ type=´text/css´media=´screen´href='style.css'>
+  <script
