--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@ id=100009582499964">Facebook</li></a>
    </nav>
   </header>
     <main>
-        <h1>TITULO DA PAGINA</h1> 
-            <
-  
+    <h1>TITULO DA PAGINA</h1> 
+      <div class="PRIMEIROPARAGRAFO">
+      <h3>TITULO DO TEXTO</h3>
+      <p><i><b>TEXTO</b></i></p> 
+      <ul id="lista02"> 
+        <li>ITEM 01</li> 
+        <li>ITEM 02</li> 
+        <li> ITEM 03</li> 
+      </ul> 
+      </div> 
+        <h1>***</h1> 
+    </main> 
+    <footer><p><img id="TITULOIMAGEM" src="logo.jpeg" alt="DESCRICAOIMAGEM"></p></footer> 
+</body> 
+</html>         
